--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.3",
+    "axios": "^0.22.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -20,5 +22,8 @@
     "ts-node-dev": "^1.1.8",
     "typeorm": "^0.2.38",
     "typescript": "^4.4.3"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0"
   }
 }
