--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.3",
     "axios": "^0.22.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
@@ -24,6 +25,7 @@
     "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.12"
   }
 }
